# UAMP

./: .aider.chat.history.md  .aider.input.history  .gitignore  README.md  install.sh  pyproject.toml  uamp.desktop
insp/: ascii-viewer
uamp/: cli.py  fsal.py  gui.py  media_engine.py  settings.py  tui.py
uamp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
